--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
    
        
     <a href="#oput">Опыт работы</a>
-    <a href="#obraz">Образоание</a>
+    <a href="#obraz">Образование</a>
     <a href="#navuk">Навыки</a>
     <a href="#kontakt">Контакты</a>
 </p>
