--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <p><a id="top"></a></p>
     <h1>Voronin Alexandr</h1>
 
-    <p><img src="/home/ynwa/Загрузки/13.jpg" title="Voronin Alexandr">
+    <p><img src="https://github.com/shefard13/Homework/blob/img-in-html/13.jpg" title="Voronin Alexandr">
    
        
     <a href="#oput">Опыт работы</a>
