--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <p><a id="top"></a></p>
     <h1>Voronin Alexandr</h1>
 
-    <p><img src=13.jpg" title="Voronin Alexandr">
+    <p><img src="13.jpg" title="Voronin Alexandr">
    
        
     <a href="#oput">Опыт работы</a>
