--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <a href="#navuk">Навыки</a>
     <a href="#kontakt">Контакты</a>
 </p>
+  
 
     <h2><a id="oput">Опыт работы</a></h2>
     <p>Контора №1 Професия №1</p>
@@ -29,7 +30,7 @@
     <p>Контора №4 Професия №3</p>
     <p>Контора №5 Професия №4</p>
     <! -- Комментарий  -->
-
+    <! -- Комментарий  -->
     <h2><a id="obraz"></a>Образование</a></h2>
     <p>Универ 1. Факультет 1. Ученая степень 1.</p>
     <p>Универ 2. Факультет 2. Ученая степень 2</p>
