--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <H1>HOMEWORK</H1>
-    <a href="1-2 HW/1-2HW.html">1. РЕЗЮМЕ </a>
+    <a href="1-2 HW/1-2HW.html" target="_blanck">1. РЕЗЮМЕ </a>
 </body>
 </html>
