--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <H1>HOMEWORK</H1>
     <a href="1-2 HW/1-2HW.html" target="_blank">1. РЕЗЮМЕ </a>
-    <a href="https://shefard13.github.io/3HW/" target="_blank">2. Список покупок/Якоря </a> 
+    <p><a href="https://shefard13.github.io/3HW/" target="_blank">2. Список покупок/Якоря </a></p>
 </body>
 </html>
