--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <H1>HOMEWORK</H1>
     <a href="1-2 HW/1-2HW.html" target="_blank">1. РЕЗЮМЕ </a>
     <p><a href="https://shefard13.github.io/3HW/" target="_blank">2. Список покупок/Якоря </a></p>
+    <p><a href="https://shefard13.github.io/3HW/" target="_blank">3. Знакомство c CSS </a></p>
 </body>
 </html>
