--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <a href="1-2 HW/1-2HW.html" target="_self">1-2. РЕЗЮМЕ </a>
     <p><a href="https://shefard13.github.io/3HW/" target="_self">3. Список покупок/Якоря </a></p>
     <p><a href="https://shefard13.github.io/4hw/" target="_self">4. Знакомство c CSS </a></p>
+    <p><a href="https://shefard13.github.io/6HW/" target="_self">6. Selector </a></p>
 </body>
 </html>
